# lustre

./: .gitmodules  CMakeLists.txt  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: lustre_core_spec.md  lustre_handoff.md  lustre_lsp_decision.md  next_steps.md  penumbra_iris_lustre_componentization_gaps_requirements.md
editors/nvim/: lustre-lsp.lua  lustre-treesitter.lua
include/Lustre/: Ast.h  Parser.h  ResolvedStyle.h  Resolver.h  SourceLocation.h  Token.h  Tokenizer.h
skills/lustre-lang/: SKILL.md
src/Lustre/: Parser.cpp  Resolver.cpp  Tokenizer.cpp
tests/: ParserTests.cpp  ResolverTests.cpp  TokenizerTests.cpp
tools/lustre-lsp/: CompletionContext.cpp  CompletionContext.h  JsonRpc.cpp  JsonRpc.h  Server.cpp  Server.h  main.cpp
tools/lustre-lsp/tests/: CompletionContextTests.cpp  JsonRpcTests.cpp  ServerTests.cpp
